# aoc_fruit_detector

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
.devcontainer/: Dockerfile  docker-compose.yml
.devcontainer/cuda-opengl/: devcontainer.json
.devcontainer/docker_include/: apt_install.dockerfile  bashrc_config.dockerfile  env_setup.dockerfile  user_install.dockerfile
.devcontainer/repos/: external.repos
.devcontainer/scripts/: install_external_ros_packages.sh  post-create.sh
.github/workflows/: dev-container.yml  docker-build-image.yml  ros-ci.yml
aoc_fruit_detector/: package.xml
aoc_fruit_detector/scripts/: fruit_detection.py  predictor.py
aoc_fruit_detector/scripts/detectron_predictor/json_writer/: JSONWriter.py
aoc_fruit_detector/scripts/detectron_predictor/json_writer/pycococreator/pycococreatortools/: fruit_orientation.py  pycococreatortools.py
aoc_fruit_detector/scripts/detectron_predictor/visualizer/: aoc_visualizer.py
config/: non_ros_params.yaml  parameters.yaml  ros_params.yaml  training_parameters.yaml
config/RViz/: initial.rviz
gui_predic_trainer/: config_paths.py  constants.py  main.py  tooltip.py
gui_predic_trainer/gui_logic/: form_renderer.py  prediction_manager.py  training_manager.py  yaml_handler.py
launch/: fruit_detection.launch.py
msg/: FruitInfoMessage.msg
scripts/: fruit_detection.py  predictor.py
scripts/detectron_predictor/: detectron_predictor.py
scripts/detectron_trainer/: aoc_trainer.py  detectron_trainer.py
scripts/utils/: utils.py
(+22 files in other folders)
