<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aoc_fruit_detector</name>
  <version>0.0.0</version>
  <description>AOC Fruit Detector package, part of Agri-OpenCore (AOC) project</description>
  <maintainer email="ayilmaz@lincoln.ac.uk">A.Yilmaz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>ament_cmake_python</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>ament_cmake_python</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
